# crabik-app-template

./: Cargo.toml  Embed.toml  README.md  cargo-generate.toml  rustfmt.toml
.cargo/: config.toml
.svd/: nrf52810.svd
src/: main.rs
