# Файл с конфигурацией проекта

[package]
# Название пакета (проекта)
name = "{{project-name}}"
# Издание (версия стиля) (по умолчанию)
edition = "2018"
# Версия проекта (по умолчанию)
version = "0.1.0"

[dependencies]
# Предоставляет различные функции для работы с Cortex-M ядром
cortex-m = "0.7.1"
# Макросы предоставляющие "точку старта", назначение прерываний и т.д. для Cortex-M ядра
cortex-m-rt = "0.6.13"
{% if rtic_enabled %}
# Предоставляет много функционала для работы с многозадачнойстью
cortex-m-rtic = "0.5.6"
{% endif %}
# Предоставляет функции и макросы для работы с протоколом RTT
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
# Предоставляет функции логирования
log = "0.4.8"
# Предоставляет различные функции и hal для платы crabik
crabik-board = "0.1.1"

# Настройка профиля компиляции для обычной сборки (отладки)
[profile.dev]
# Кол-во потоков при компиляции,
# меньше - ниже скорость компиляции, но лучше общая оптимизация,
# больше - выше скорость компиляции, но хуже общая оптимизация
codegen-units = 1
# Отладочная информация
debug = 2
# Отладочная информация
debug-assertions = true
incremental = false
# Уровень оптимизации (оптимальный)
opt-level = 2
# Проверка на переполнения в программе
overflow-checks = true

# Настройка профиля компиляции для итоговой сборки (релиз)
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# Меньше оптимизаций процедурных макросов - быстрее компиляция
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
